@@ -1,4 +1,6 @@
 2.0.0 (trunk):
+* [types]: backwards incompatible change: CONSOLE is now a FLOW;
+  'write' has a different signature and 'write_all' has been removed.
 * Set on_crash = 'preserve' in default Xen config.
 * Automatically install dependencies again, but display the live output to the
   user.
